# face-recognition-on-edge

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo.py  evaluate_pipeline.py  simple_deepface_match.py  simple_face_match.py  test_optimized_pipeline.py
src/face_recognition_on_edge/: __init__.py  deepface_pipeline.py  face_detector.py  face_matcher.py  face_recognition_pipeline.py  feature_extractor.py  lfw_dataset.py
